# minesector

./: .gitignore  CMakeLists.txt  README.md  anim.cpp  anim.h  appicon.icns  build_emcc.sh  button.cpp  button.h  common.h  configure  configure.sh  demo.js  demo.wasm  dev.rzia.minesector.appdata.xml  game.cpp  game.h  index.html  main.cpp  makefile  makefile.mk  minesector.desktop  texture.cpp  texture.h
.github/workflows/: build_emcc.yml  cmake.yml  publish.yml  winbuild.yml  wintest.yml
assets/images/gimp/: blank_square.xcf  flag.xcf
demo/: demo.data
docs/: app.js  demo.data  demo.js  demo.wasm  emscripten_sdl2_ttf.py  index.html  mine.js  testing_server.sh
gimp/: speaker_icon.kra  tile.xcf
icons/: appicon.icns
images/gimp/: flag.xcf  hovered_tile.xcf  mine.xcf  number_1.xcf  number_2.xcf  number_3.xcf  number_4.xcf  number_5.xcf  number_6.xcf  number_7.xcf  number_8.xcf  numbers.xcf
src/: anim.cpp  anim.h  app.h  backend.h  button.cpp  button.h  color.cpp  color.h  common.h  font.cpp  font.h  frontend.cpp  frontend.h  game.cpp  game.h  main.cpp  makefile  native_frontend.cpp  sdl_frontend.cpp  test_frontend.c  test_frontend.cpp  text.cpp  text.h  texture.cpp  texture.h  tile.cpp  tile.h
tests/: die  die.expected  die.initial  full  full.expected  full.initial  red  red.expected
tools/: test.lua
